# reports

./: README.md
data/use_case_1/: ENST00000602326.5.fa  ENST00000602326.5.fa.fai  igv_session.xml
full_pipeline/: README.md  extract_longest_isoforms.py  filter_overlaps.py  run1.md
report1/: uniref_genes_clusters.ipynb
report10_different_aligners/: README.md
report2_step5/: Bcool_report.ipynb  Report2.ipynb
report3_mmseqs/: MMseqs_v1.ipynb  transform_m8.ipynb
report4_testPerformance/: gfa_to_connected_components.py  report4.ipynb  transform_m8.py
report5_gencodeReprs/: README.md  extract_transcripts_from_gtf.py  pipeline_run2.ipynb  pipeline_run3.md  pipeline_run4_nonoverlapped.md  pipeline_run5_rmPsuedogenes.md  report5.ipynb
report5_gencodeReprs/coverage/: README.md  before_after_cov.hist  before_after_cov.hist.tsv  uniq_before_after_cov.hist  uniq_before_after_cov.hist.tsv
report5_gencodeReprs/pipeline/: 1_generate_cDBGs.sh  2_coverage.sh
report5_gencodeReprs/run_3_coverage/: before_after_cov.hist.tsv
report5_gencodeReprs/run_5_coverage/: README.md  before_after_cov.hist.tsv
report6_changeRef_cov/: README.md
report6_optimum_params/: 1_kmers_histogram.tsv  README.md  aggregated_run.md  cdhit_histo.py  clusters_size.py  histo_plot.py  nestedKmerCount.ipynb  nested_kCount_histo.py  plotly_clusters_size.py  plotly_nested_kCount_histo.py  run2_nonoverlapped.md  run3_noPseudogenes.md
report7_SSAKE/: README.md
report9_kProcessor/: README.md  head10.fa  head10.fa.names  report9.py
report9_kProcessor/cpp_exp/: CMakeLists.txt  README.md  main.cpp
(+33 files in other folders)
